[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "ffpolish"
version = "0.1.0"
description = "Filters Artifacts From Formalin-Fixed Paraffin-Embedded (FFPE) Variants."
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [
    {name = "Ryan D Morin Laboratory"},
    {name = "Jon Deans", email = "jrdeans@gmail.com"},
]
dependencies = [
    "loguru",
    "pandas",
    "pysam",
    "rich",
    "scikit-learn",
]

[project.scripts]
ffpolish = "ffpolish.cli:main"

[project.optional-dependencies]
dev = [
    "mypy==1.9.0",
    "pytest==8.1.1",
    "ruff==0.3.4"
]

[project.urls]
repository = "https://github.com/jondeans/FFPolish"

[tool.pytest.ini_options]
addopts = "-r A -v -s --import-mode=importlib --doctest-modules"
testpaths = ["tests"]
python_files =[
    "test_*.py",
    "check_*.py",
    "example_*.py"
]

[tool.ruff]
line-length = 100
